@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{20458D50-3D54-45DD-9E22-5B2289B6AB91}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="BindingEnvironment.cs" />
     <Compile Include="Commands\CompositeCommand.cs" />
+    <Compile Include="Commands\VarCommand.cs" />
     <Compile Include="Commands\GoCommand.cs" />
     <Compile Include="Commands\DefineObjectCommand.cs" />
     <Compile Include="Commands\SetArrayCommand.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="Commands\SetCommand.cs" />
     <Compile Include="Expressions\ArrayExpression.cs" />
     <Compile Include="Expressions\ConcatenateExpression.cs" />
+    <Compile Include="Expressions\InvokeExpressionExpression.cs" />
     <Compile Include="Expressions\InitializeNewArrayExpression.cs" />
     <Compile Include="Expressions\NewArrayExpression.cs" />
     <Compile Include="Expressions\IncrementExpression.cs" />
